--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://healthdashboardapp.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "moment": "^2.22.2",
