--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.1.3",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "nodemon": "^1.18.3"
   }
 }
