--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "concurrently": "^3.5.0"
   },
   "dependencies": {
+    "@cloudant/cloudant": "^2.3.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongodb": "^3.1.3",
     "moment": "^2.22.2",
+    "mongodb": "^3.1.3",
     "nodemon": "^1.18.3"
   }
 }
