--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.15.6",
     "moment": "^2.22.2",
     "mongodb": "^3.1.3",
+    "node-excel-export": "^1.4.4",
     "nodemon": "^1.18.3",
     "uuid": "^3.3.2"
   }
