--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "dependencies": {
     "@cloudant/cloudant": "^2.3.0",
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "connect-memcached": "^1.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
