--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^2.0.3",
+    "downloadjs": "^1.4.7",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "react": "^16.4.1",
