--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.1.3",
     "node-excel-export": "^1.4.4",
     "nodemon": "^1.18.3",
+    "session-file-store": "^1.2.0",
     "uuid": "^3.3.2"
   }
 }
